--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>MetaKongz</title>
 
   <!-- <link rel="stylesheet" href="https://themetakongz.com/_css/hub.css" /> -->
-  <link rel="stylesheet" href="/public/css/import.css" />
+  <link rel="stylesheet" href="./assets/css/import.css" />
   <link rel="shortcut icon" type="image/x-icon" href="https://themetakongz.com/_img/comm/favicon.png" />
   <link rel="canonical" href="http://themetakongz.com/" />
 </head>
@@ -703,12 +703,12 @@
     </div>
   </div>
 
-  <script src="/public/js/jquery.min.js"></script>
-  <script src="/public/js/jquery.easing.min.js"></script>
-  <script src="/public/js/bootstrap.min.js"></script>
-  <script src="/public/js/swiper-bundle.min.js"></script>
-  <script src="/public/js/aos.js"></script>
-  <script src="/public/js/script.js"></script>
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/jquery.easing.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="./assets/js/swiper-bundle.min.js"></script>
+  <script src="./assets/js/aos.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
