--- a/en.html
+++ b/en.html
@@ -79,7 +79,7 @@
         </ul>
       </div>
       <div class="head_side_lan">
-        <!-- <a href="/index.html"><img src="https://themetakongz.com/_img/comm/icon_lan.png" alt="언어선택" /></a> -->
+        <a href="/index.html"><img src="https://themetakongz.com/_img/comm/icon_lan.png" alt="언어선택" /></a>
         <a href="javascript:void(0)" onclick="alert('Coming Soon! Globalization NFT - Meta Kongz!')"><img src="https://themetakongz.com/_img/comm/icon_shop.png" alt="쇼핑몰" /></a>
       </div>
       <div class="head_side_bugger">
@@ -122,7 +122,7 @@
     </div>
 
     <main role="main">
-      <div id="main_container" data-bs-spy="scroll" data-bs-target="#myNavbar" data-bs-offset="-50">
+      <div id="main_container">
         <section id="sec_story">
           <div class="row">
             <div>
@@ -678,7 +678,7 @@
 
             <div class="rank_search">
               <div class="thum">
-                <img id="kongz_image" src="https://themetakongz.com/_img/rank_none_img.png" class="wp100" style="max-width: 360px" alt="" />
+                <img id="kongz_image" src="https://themetakongz.com/_img/rank_none_img.png" class="wp100" style="max-width: 360px" alt="" />1
               </div>
               <div class="kongz_info">
                 <form action="" id="kongz_form">
