--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </ul>
       </div>
       <div class="head_side_lan">
-        <a href="/index.html"><img src="https://themetakongz.com/_img/comm/icon_lan.png" alt="언어선택" /></a>
+        <!-- <a href="/index.html"><img src="https://themetakongz.com/_img/comm/icon_lan.png" alt="언어선택" /></a> -->
         <a href="javascript:void(0)" onclick="alert('Coming Soon! Globalization NFT - Meta Kongz!')"><img src="https://themetakongz.com/_img/comm/icon_shop.png" alt="쇼핑몰" /></a>
       </div>
       <div class="head_side_bugger">
@@ -135,28 +135,21 @@
                 <div class="story_contents">
                   <ul>
                     <li>
-                      <p><strong>#1.</strong> 휴일마다 서커스장에 모이는 사람들 </p>
-                      유리로 된 케이지속에서는 친구의 털을 고르는 것조차 신경이 쓰입니다.
-                      <br />이렇게 지루한데 사람들은 뭐가 좋아 꺅꺅대는 걸까요? <br />그러던 어느 날, 하품을 하던 고릴라 앞으로 날아온 포스터 한 장. <br />그곳엔 고릴라들의 파라다이스가 그려져 있었습니다. <br />[가장 완벽한 생태계 - 하프 문 국립공원 신설]
+                      <p><strong>#1.</strong>질병과의 전쟁이 언제 종지부를 찍게 될지 아무도 모르는 상황<br>
+                        항상 왁자지껄하던 클레이 동물원에도<br>
+                        더 이상 발자국 하나 들리지 않는 침묵이 찾아왔다.<br>
+                        직장을 잃게 된 클레이 동물원의 원숭이들은<br>
+                        초라한 실직 상태를 더 이상 유지할 수 없어 거리로 나오게 되는데...
                     </li>
                     <li>
-                      <p><strong>#2.</strong> 진짜로 그런 곳이 있다고? </p>
-                      고릴라들은 조련사의 열정적인 훈련에도 귀를 기울이지 않습니다.
-                      <br />불타는 고리 넘기, 악기를 두드리는 와중에도 포스터의 그림이 눈 앞에 맴돕니다. <br />그런데 이 포스터, 지금 누가 가지고 있더라? <br />주위의 고릴라를 봐도 온통 맨손뿐. <br />훈련을 포기한 조련사가 나가고 불이 꺼지자, 파지직! 서커스장 바닥 맨홀 뚜껑에서 빛이 뿜어져 나옵니다.
-                    </li>
-                    <li>
-                      <p><strong>#3.</strong> 가운 차림의 고글 쓴 고릴라를 본 적 있나요? </p>
-                      서커스장 아래 새하얀 실험실에서는 고글 쓴 고릴라 하나가 커다란 엔진을 조립하고 있습니다.
-                      <br />일을 멈춘 고릴라는 방문객들을 앉혀 놓고 벽으로 걸어가 커튼을 젖힙니다. <br />조악한 그림 두 개와 포스터 한 장. <br />고릴라는 아래에 적힌 글을 가리키며 아직도 모르겠냐는 듯 고개를 갸웃댑니다. <br />[Craft and Fly / to the Paradise]
-                    </li>
-                    <li>
-                      <p><strong>#4.</strong> 서커스장을 띄우는데 소시지가 필요할까요? 그럼 바나나는요?</p>
-                      도심아래 거미줄처럼 이어진 하수구 속으로, 고릴라들은 퇴근하는 대신 부품을 찾아 떠납니다.
-                      <br />야심한 밤 도시를 누비며 빈 봉투를 채우는 고릴라들. 잠깐, 돈은 내고 있는 건가요? <br />마지막으로 턴 금은방에는 시계가 가득했고, 이제 고릴라들은 시간을 알게 되었습니다. <br />사람들 사이에서도 조만간 괴담이 돌겠죠. 하수구 속의 고릴라 손을 조심하라고...
+                      <p><strong>#2.</strong>원숭이들은 거리에서<br>
+                        제각기 입맛에 맞는 도구들을 손에 쥐기 시작한다<br>
+                        마이크와 펜, 붓, 악기 그리고 카메라<br>
+                        이들은 거리의 유랑단이 되어<br>
+                        멋진 아티스트로써의 입지를 다지기 시작하는데...
                     </li>
                   </ul>
                 </div>
-                <p class="more"><button><img src="https://themetakongz.com/_img/story_more.png" alt="" /></button></p>
               </div>
             </div>
           </div>
@@ -187,8 +180,8 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="100"><span>5<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    민팅 완료 후 Kongz 15개 이상 보유한 홀더<br />
-                    전원에게 <span>'한정판NFT'를 에어드랍</span> 한다.
+                    AAC NFT 15개 이상 보유한 <br>
+                    홀더들에게 <span>한정판 NFT를 에어드랍</span> 한다.
                   </div>
                 </div>
               </li>
@@ -196,8 +189,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="200"><span>10<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    서울시 관할 로드 광고판에<br />
-                    <span>‘완판 기념’</span> 광고를 한다.
+                    <span>AAC 힙합 전문 유튜브 채널</span>을 개설 한다.
                   </div>
                 </div>
               </li>
@@ -205,8 +197,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="300"><span>15<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    샌드박스, 디센트럴랜드, 크립토복셀<br />
-                    메타버스의 <span>땅을 구입</span>한다.
+                    샌드박스 메타버스의 <span>땅을 구입</span>한다.
                   </div>
                 </div>
               </li>
@@ -214,8 +205,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="100"><span>20<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    메타버스 크립토 복셀에서<br />
-                    <span>신년 축하파티</span>를 한다.
+                    <span>셀럽 인플루언서와 콜라보</span>를 진행한다.
                   </div>
                 </div>
               </li>
@@ -223,8 +213,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="200"><span>25<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    <p>지원하는 홀더 3명과 함께 <span>아프리카 우간다 or 르완다에 직접 가서</span> 어려움에 빠진 고릴라들을 지원한다.</p>
-                    <p>미션을 성공적으로 완료하면, <span>홀더 3명에게 한정판 NFT를 지급</span>한다.</p>
+                    서울 대로변 (강남, 홍대, 영등포)<br><span>전광판 광고를 게시</span>한다.
                   </div>
                 </div>
               </li>
@@ -232,8 +221,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="300"><span>30<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    <span>유튜브 채널 Kongz</span>를<br />
-                    시작한다.
+                    <span>거버넌스 기능</span>을 구축한다.
                   </div>
                 </div>
               </li>
@@ -241,8 +229,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="100"><span>35<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    <span>거버넌스</span> 기능을<br />
-                    홈페이지에 추가한다.
+                    <span>AAC V2</span>를 3D 고퀄리티 아트로 런칭한다.
                   </div>
                 </div>
               </li>
@@ -250,8 +237,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="200"><span>40<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    코인 <span>생태계 구축</span> 및 <span>브리딩</span> 기능<br />
-                    개발을 시작한다.
+                    <span>토크노믹스</span> 개발을 계획한다.
                   </div>
                 </div>
               </li>
@@ -259,8 +245,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="200"><span>50<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    공식 홈페이지 내<br />
-                    <span>‘홀더 전용 콩즈 스토어’</span>가 잠금 해제된다.
+                    AAC 소유 메타버스 땅에서 <span>셀럽과 파티</span>를연다.
                   </div>
                 </div>
               </li>
@@ -268,8 +253,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="100"><span>60<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    세계화를 위하여<br />
-                    <span>국내 상위 엔터테인먼트</span>에 <span>협업</span>을 제안한다.
+                    <span>브리딩 시스템</span> 개발을 시작한다.
                   </div>
                 </div>
               </li>
@@ -277,8 +261,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="200"><span>70<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    한정판 NFT인 <span>‘00’</span>을<br />
-                    <span>홀더만 구매가 가능</span>하도록 열어둔다.
+                    홀더 전용 <span>ACC 마켓을 오픈</span> 한다.
                   </div>
                 </div>
               </li>
@@ -286,8 +269,7 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="300"><span>80<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    B.A.Y.C or CyberKongz 에게<br />
-                    <span>협업 제안 이메일</span>을 발송한다.
+                    ACC 홀더만 구매가 가능한<br><span>'00'셀럽 아티스트와의 콜라보 NFT를 런칭</span>한다.
                   </div>
                 </div>
               </li>
@@ -295,22 +277,22 @@
                 <p class="per" data-aos="flip-left" data-aos-delay="100"><span>90<small>%</small></span></p>
                 <div class="box">
                   <div>
-                    샌드박스에 복셀 아바타와<br />
-                    <span>게임 개발</span>을 시작한다.
+                    ACC 전용 <span>P2E 게임 개발</span>을 시작한다.
                   </div>
                 </div>
               </li>
               <li class="finish">
                 <p class="per" data-aos="flip-left" data-aos-delay="200"><span>100<small>%</small></span></p>
                 <div class="box">
-                  <div> 혹성탈출! 'K-NFT 세계화'<br />2.0은 본격적인 메타버스로! </div>
+                  <div>
+                    AAC 소유 메타버스 땅에서 <span>다수 셀럽 아티스트들의 콘서트를 개최</span>한다.
+                  </div>
                 </div>
               </li>
             </ul>
 
             <div class="detail_roadmap">
-              <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#roadmap_pop">상세 로드맵 보기 <i class="xi-angle-right-min"></i></a>
-              <a href="https://themetakongz.com/_img/download/ProjectKongz_roadmap.pdf" target="_blank" download>상세 로드맵 다운로드 <i class="xi-arrow-bottom"></i></a>
+              <a href="javascript:void(0)" data-bs-toggle="modal" data-bs-target="#roadmap_pop">ACC의 발자취<i class="xi-angle-right-min"></i></a>
             </div>
           </div>
 
@@ -678,7 +660,7 @@
 
             <div class="rank_search">
               <div class="thum">
-                <img id="kongz_image" src="https://themetakongz.com/_img/rank_none_img.png" class="wp100" style="max-width: 360px" alt="" />1
+                <img id="kongz_image" src="https://themetakongz.com/_img/rank_none_img.png" class="wp100" style="max-width: 360px" alt="" />
               </div>
               <div class="kongz_info">
                 <form action="" id="kongz_form">
